--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,7 @@
-{}
+{
+  "newFileLocation": "current",
+  "newFileFolderPath": "data engineering/concepts",
+  "newLinkFormat": "absolute",
+  "useMarkdownLinks": true,
+  "showLineNumber": true
+}
